# jai

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  release.yml
docs/: architecture.md  evaluation.md  opening_personality.md  search.md
scripts/: build.bat  build.sh
src/: board.cpp  board.h  constants.h  evaluation.cpp  evaluation.h  history.cpp  history.h  main.cpp  move.cpp  move.h  movegen.cpp  movegen.h  opening_personality.cpp  opening_personality.h  perft.cpp  perft.h  search.cpp  search.h  time_manager.cpp  time_manager.h  tt.cpp  tt.h  uci.cpp  uci.h  zobrist.cpp  zobrist.h
tests/: evaluation_tests.cpp  perft_tests.cpp  search_tests.cpp
